--- a/views/check.ejs
+++ b/views/check.ejs
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h2>토큰 값을 입력해주세요^^</h2>
-		<form action="./signup.php" method="post" id="signupForm">
+		<form action="#" method="post">
 			<div>
 				<input type='text' maxlength=50 placeholder='토큰 값 입력'>
 			</div>
