--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -6,10 +6,16 @@
 	</head>
 	<body>
 		<h2>회원 가입 정보를 입력해주세용^^</h2>
-		<form action="#" method="#">
+		<form action="#" method="post">
+			<div>
+				<input type='text' value='username' placeholder='실명'>
+			</div>
+			<div>
+				<input type='text' value='userid' placeholder='아이디'>
+			</div>
 			<div class='checkbox'>
-				NAS용 <input type="checkbox" value="nas">
-				Wiki용 <input type="checkbox" value='wiki'>
+				NAS용 <input type="checkbox" value="true">
+				Wiki용 <input type="checkbox" value='true'>
 			</div>
 			<div>
 				<input type="button" value="제출">
