--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -5,7 +5,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap" rel="stylesheet">
 		<meta charset='utf-8'>
-		<link rel='stylesheet' href='t2.css'>
+		<link rel='stylesheet' href='submit.css'>
 	</head>
 	<body>
 		<form action="#" method="post" class='box'>
