--- a/views/check.ejs
+++ b/views/check.ejs
@@ -1,18 +1,23 @@
-<!DOCTYPE HTML>
-<html>
-	<!--맨 처음에 토큰 값을 입력 받을 페이지-->
-	<head>
-		<meta charset='utf-8'>
-	</head>
-	<body>
-		<h2>토큰 값을 입력해주세요^^</h2>
-		<form action="#" method="post">
-			<div>
-				<input type='text' maxlength=50 placeholder='토큰 값 입력'>
-			</div>
-			<div>
-				<input type="button" value="제출">
-			</div>
-		</form>
-	</body>
+<!DOCTYPE html>
+
+<head>
+    <meta charset="utf-8">
+    <title>login</title>
+    <link rel="stylesheet" href="/static/css/check.css">
+</head>
+
+<body>
+<br>
+<center><img src="/static/images/CASPER.png"></center>
+<div>
+    <form class="box" action="#" method="POST">
+        <h2 style="font-size: larger;">토큰값을 입력해주세용 ^^</h2>
+        <input type="text" maxlength=50 placeholder="토큰값 입력">
+        <input type="submit" value="Submit">
+
+    </form>
+</div>
+
+</body>
+
 </html>
