--- a/static/css/check.css
+++ b/static/css/check.css
@@ -1,12 +1,13 @@
 body{
     margin:0;
     padding:0;
-    background:#34495E;
+    background:linear-gradient(#34495E 60%, rgb(66,79 ,111) 40%);
     font-family:system-ui;
 }
 
 .box{
-    width:350px;
+    width:400px;
+    height: 200px;
     padding:60px;
     position: absolute;
     top :50%;
