--- a/views/check.ejs
+++ b/views/check.ejs
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>login</title>
-    <link rel="stylesheet" href="/static/css/check.css">
+    <link rel="stylesheet" href="check.css">
 </head>
 
 <body>
 <br>
-<center><img src="/static/images/CASPER.png"></center>
+<center><img src="CASPER.png"></center>
 <div>
     <form class="box" action="#" method="POST">
         <h2 style="font-size: larger;">토큰값을 입력해주세용 ^^</h2>
