--- a/views/check.ejs
+++ b/views/check.ejs
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>login</title>
     <link rel="stylesheet" href="check.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap" rel="stylesheet">
 </head>
 
 <body>
