--- a/views/check.ejs
+++ b/views/check.ejs
@@ -13,7 +13,7 @@
 <center><img src="CASPER.png"></center>
 <div>
     <form class="box" action="#" method="POST">
-        <h2 style="font-size: larger;">토큰값을 입력해주세용 ^^</h2>
+        <h1>토큰값을 입력해주세용 ^^</h1>
         <input type="text" maxlength=50 placeholder="토큰값 입력">
         <input type="submit" value="Submit">
 
