--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -5,9 +5,29 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap" rel="stylesheet">
 		<meta charset='utf-8'>
+		<meta name='viewport' content='width=device-width, initial-scale=1.0'>
 		<link rel='stylesheet' href='submit.css'>
 	</head>
 	<body>
+		<img src='image/casperlogo.png' class='logo'>
+		<div class='ghost'>
+			<div class='face'>
+				<div class='eyes'>
+					<span></span><span></span>
+				</div>
+				<div class='mouth'></div>
+			</div>
+			<div class='hands'>
+				<span></span><span></span>
+			</div>
+			<div class='feet'>
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
+			<div id="shadow"></div>
+		</div>
 		<form action="#" method="post" class='box'>
 			<h1>회원 가입 정보를 입력해주세용^^</h1>
 			<div>
@@ -24,5 +44,9 @@
 				Register
 			</button>		
 		</form>	
+		<div id='lockbox'>
+			<div id='lock'>
+			</div>
+		</div>
 	</body>
 </html>
