--- a/static/css/submit.css
+++ b/static/css/submit.css
@@ -1,11 +1,19 @@
 body {
+	height: 100vh;
+	width: 100vw;
 	margin:0;
 	padding:0;
-	background:#34495e;
+	background: linear-gradient(#34495e 58%, #424f6f 42%);
 }
 
+img.logo{
+	position:absolute;
+	top:3%;
+	left:55%;
+	height:180px;
+}
 .box {
-	width: 500px;
+	width: 420px;
 	padding: 40px;
 	position:absolute;
 	top: 50%;
@@ -103,3 +111,173 @@ input[type='checkbox']:before{
 input:checked[type='checkbox']:before{
 	left:25px;
 }
+
+.ghost {
+	top: 48%;
+	left: 17%;
+	width: 140px;
+	height: 160px;
+	background-color: #f2fbf1;
+	border-radius: 70px 70px 0 0;
+	position:absolute;
+	cursor: pointer;
+	animation: floating 2s infinite ease-in-out;
+}
+
+@keyframes floating {
+    50% {
+        transform: translateY(-30px);
+    }
+}
+.face{
+	width: 100px;
+	position: absolute;
+	top: 60px;
+	left: calc(50% - 50px);
+}
+
+.eyes{
+	height: 0px;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	margin-bottom: 14px;
+}
+
+.eyes span {
+	width: 24px;
+	height: 24px;
+	background-color: #2c3a47;
+	border-radius: 50%;
+	transition: .3s linear;
+}
+
+.ghost:hover .eyes span{
+	height: 2px;
+}
+
+.mouth {
+	width: 40px;
+	height: 20px;
+	background-color: #2c3a47;
+	margin: auto;
+	border-radius: 0 0 20px 20px;
+	transition: .3s linear;
+}
+
+.ghost:hover .mouth{
+	height: 2px;
+}
+
+.hands {
+	width: 180px;
+	position:absolute;
+	left:-20px;
+	top:80px;
+	display:flex;
+	justify-content: space-between;
+}
+
+.hands span {
+	width: 20px;
+	height: 30px;
+	background-color: #f2fbf1;
+}
+
+.hands span:first-child{
+	border-radius: 20px 0 0 20px;
+}
+
+.hands span:last-child{
+	border-radius: 0 20px 20px 0;
+}
+
+.feet {
+	position:absolute;
+	width:100%;
+	bottom: -20px;
+	display: flex;
+}
+
+.feet span{
+	flex: 1;
+	height: 20px;
+	background-color:#f2fbf1;
+	border-radius: 0 0 20px 20px;
+}
+
+.feet span:first-child{
+	border-radius: 0 0 20px 12px;
+}
+
+.feet span:last-child{
+	border-radius: 0 0 12px 20px;
+}
+
+#shadow {
+	position:absolute;
+	top:210px;
+	left:-15%;
+    background: #252c49;
+    width: 180px;
+    height: 40px;
+    border-radius: 50%;
+    animation: zoomy 2s infinite;
+}
+
+@keyframes zoomy {
+    0%, 100% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(0.8);
+    }
+}
+
+#lockbox {
+	position: absolute;
+	top:60%;
+	left:73%;
+}
+
+#lock {
+	font-size: 8px;
+    position: absolute;
+    width: 15em;
+    height: 10em;
+    border-radius: 2em;
+    top: 10em;
+    box-sizing: border-box;
+    border: 3.5em solid #f2fbf1;
+    border-right-width: 7.5em;
+    border-left-width: 7.5em;
+    margin: 0 0 6rem 0;
+  }
+
+ #lock:before {
+    content: "";
+    box-sizing: border-box;
+    position: absolute;
+    border: 1em solid #f2fbf1;
+    width: 9em;
+    height: 12em;
+    left: 20px;
+    margin-left: -7em;
+    top: -10em;
+    border-top-left-radius: 7em;
+    border-top-right-radius: 7em;
+  }
+
+  #lock:after {
+    content: "";
+    box-sizing: border-box;
+    position: absolute;
+    border: 1em solid #9e9e9e;
+    width: 5em;
+    height: 7em;
+    border-radius: 2.5em;
+    left: 50%;
+    top: -2em;
+    margin-left: -2.5em;
+  }
