--- a/views/check.ejs
+++ b/views/check.ejs
@@ -10,9 +10,9 @@
 
 <body>
 <br>
-<center><img src="CASPER.png"></center>
+<center><img src="images/CASPER.png"></center>
 <div>
-    <form class="box" action="#" method="POST">
+    <form class="box" action="/token_check" method="POST">
         <h1>토큰값을 입력해주세용 ^^</h1>
         <input type="text" maxlength=50 placeholder="토큰값 입력">
         <input type="submit" value="Submit">
