--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -9,7 +9,7 @@
 		<link rel='stylesheet' href='submit.css'>
 	</head>
 	<body>
-		<img src='image/casperlogo.png' class='logo'>
+		<img src='images/casperlogo.png' class='logo'>
 		<div class='ghost'>
 			<div class='face'>
 				<div class='eyes'>
@@ -28,7 +28,7 @@
 			</div>
 			<div id="shadow"></div>
 		</div>
-		<form action="#" method="post" class='box'>
+		<form action="/submit" method="post" class='box'>
 			<h1>회원 가입 정보를 입력해주세용^^</h1>
 			<div>
 				<input type='text' name='username' placeholder='실명'>
