--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -6,10 +6,10 @@
 		<link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap" rel="stylesheet">
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1.0'>
-		<link rel='stylesheet' href='submit.css'>
+		<link rel='stylesheet' href='/css/submit.css'>
 	</head>
 	<body>
-		<img src='images/casperlogo.png' class='logo'>
+		<img src='/images/casperlogo.png' class='logo'>
 		<div class='ghost'>
 			<div class='face'>
 				<div class='eyes'>
