--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -37,8 +37,8 @@
 				<input type='text' name='userid' placeholder='사용할 아이디'>
 			</div>
 			<div>
-				NAS용<input type="checkbox" value="true">
-				Wiki용<input type="checkbox" value="true">
+				NAS용<input type="checkbox" name="nas" value="true">
+				Wiki용<input type="checkbox" name="wiki" value="true">
 			</div>
 			<button type="submit" class="btn">
 				Register
