--- a/static/css/submit.css
+++ b/static/css/submit.css
@@ -8,9 +8,9 @@ body {
 
 img.logo{
 	position:absolute;
-	top:3%;
+	top:2%;
 	left:55%;
-	height:180px;
+	height:160px;
 }
 .box {
 	width: 420px;
@@ -35,7 +35,7 @@ input::placeholder {
 	font-size:17px;
 }
 
-.box input[type='text']{
+.box input[type='text'],.box input[type='email']{
 	border:0;
 	background:none;
 	display:block;
@@ -51,7 +51,7 @@ input::placeholder {
 	font-size:17px;
 }
 
-.box input[type='text']:focus{
+.box input[type='text']:focus,.box input[type='email']:focus{
 	width: 300px;
 	border-color: #2ecc71;
 	background:#e8f0fe;
@@ -281,3 +281,27 @@ input:checked[type='checkbox']:before{
     top: -2em;
     margin-left: -2.5em;
   }
+
+#footer{
+	position: absolute;
+	top:95%;
+	left: 50%;
+	transform:translate(-50%,-50%);
+	font:bold 16px sans-serif;
+}
+#footer a:link { color: #3498db; }
+#footer a:visited { color: #3498db; }
+#footer a:hover { color:#2ecc71; }
+#footer a { text-decoration: none; text-shadow: 0 0 8px;}
+
+
+@media (max-width:1200px){
+	.ghost {
+		z-index:1;
+	}
+}
+@media (max-width:930px){
+	.ghost{
+		display:none;
+	}
+}
