--- a/views/check.ejs
+++ b/views/check.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <meta charset="utf-8">
     <title>login</title>
@@ -19,6 +19,12 @@
 
     </form>
 </div>
+    <div id="footer">
+        <p>
+            This project is <a href="https://github.com/CASPER-REPSAC/Casper_registration_form">open source.</a>
+        </p>
+    </div>
+
 
 </body>
 
