--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -53,7 +53,7 @@
 		</div>
 		<div id="footer">
             <p>
-				This project is <a href="https://www.safsfsa.com">open source.</a>
+				This project is <a href="https://github.com/CASPER-REPSAC/Casper_registration_form">open source.</a>
 			</p>
         </div>
 	</body>
