--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -31,10 +31,10 @@
 		<form action="/submit" method="post" class='box'>
 			<h1>회원 가입 정보를 입력해주세용^^</h1>
 			<div>
-				<input type='text' name='username' placeholder='실명'>
+				<input type='text' name='username' placeholder='실명' maxlength='14'>
 			</div>
 			<div>
-				<input type='text' name='userid' placeholder='사용할 아이디'>
+				<input type='text' name='userid' placeholder='사용할 아이디' maxlength='15'>
 			</div>
 			<div>
 				<input type='email' name='email' placeholder='이메일'>
